force-app/main/default/objects/Billing__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <description>Total amount of this bill</description>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>