force-app/main/default/objects/Billing__c/fields/Bill_Date__c.field-meta.xml
<CustomField>
        <fullName>Bill_Date__c</fullName>
        <description>Date this bill was issued</description>
        <label>Bill Date</label>
        <type>Date</type>
    </CustomField>