force-app/main/default/objects/Billing__c/fields/Subscription__c.field-meta.xml
<CustomField>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Billing</relationshipLabel>
        <relationshipName>Subscription</relationshipName>
        <type>Lookup</type>
    </CustomField>