force-app/main/default/objects/Billing__c/fields/Term__c.field-meta.xml
<CustomField>
        <fullName>Term__c</fullName>
        <description>Number of weeks covered by this bill</description>
        <label>Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>